# Lazyshot-Camera

./: build.gradle  build.gradle.kts  settings.gradle.kts
.github/workflows/: build_apk.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeCameraEngine.cpp
app/src/main/java/com/example/lazyshot/: CameraRepository.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
